--- a/server_serial_port/app/views/image/index.html.erb
+++ b/server_serial_port/app/views/image/index.html.erb
@@ -4,7 +4,11 @@
 <% @images.each do |image| %>
 	<div class="image_and_name">
    		<%= image_tag "#{image.split('/').last}", :class => "style_image" %> <br >
-   		<span>File:</span> <%= link_to "#{image.split('/').last}",  image_load_path(:image => image.split('/').last) %>
+   		<span>File:</span> <%= link_to "#{image.split('/').last}",  image_load_path(:image => image.split('/').last) %> <br>
+   		
+   		<input type="checkbox" name="compare_#{image.split('/').last}" value="Bike"> Compare
+
+
    	</div>
 <% end %>
 </div>
