--- a/server_serial_port/app/views/image/load.html.erb
+++ b/server_serial_port/app/views/image/load.html.erb
@@ -1,17 +1,3 @@
-<h1>Image#load</h1>
-<p>Find me in app/views/image/load.html.erb</p>
+<h1>Result</h1>
 
-<h2><%= @img_view.format %></h2>
-<h2><%= @img_view.filename.split(".")[0] %></h2>
-
-
-<%= @img_view %>
-
-
-<%= image_tag("coisamanipcp.jpg") %> 
-<h1>Teste</h1>
-<%= image_tag("pic4nb.png") %>
-<%= image_tag("coisa.jpg") %>
-
-<img src="home/frakinho/image_manipulation/server_serial_port/teste.jpg" alt="coisa">
 
