--- a/server_serial_port/app/views/layouts/application.html.erb
+++ b/server_serial_port/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
 <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/scales_of_Balance-64.png" > 
 <h2><%= link_to("Balança v.0.1",root_path) %></h2>
+<%= link_to "Index", image_index_path %> - <%= link_to "Main", root_path%>
 
 <%= yield %>
 
