--- a/server_serial_port/app/views/image/index.html.erb
+++ b/server_serial_port/app/views/image/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of images</h1>
 
 <div class="index_image_stype">
-<%= form_tag("/image/compare", method: "get") do %>
+<%= form_tag("/image/distance_diference", method: "get") do %>
 
 	<% @images.each do |image| %>
 		<div class="image_and_name">
