--- a/server_serial_port/app/views/layouts/application.html.erb
+++ b/server_serial_port/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>ServerSerialPort</title>
@@ -13,6 +12,14 @@
 <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/scales_of_Balance-64.png" > 
 <h2><%= link_to("Balança v.0.1",root_path) %></h2>
 <%= link_to "Index", image_index_path %> - <%= link_to "Main", root_path%>
+	<div id="my_camera" style="width:320px; height:240px;"></div>
+    <div id="my_result"></div>
+	
+	<script>
+    	Webcam.attach( '#my_camera' );
+    </script>
+
+    <button onclick="take_snapshot()">Tirar foto</button>
 
 <%= yield %>
 
