--- a/server_serial_port/app/assets/stylesheets/application.css
+++ b/server_serial_port/app/assets/stylesheets/application.css
@@ -27,4 +27,55 @@
 	zoom: 200%
 }
 
+.index {
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.image_medium img{
+	width: 40px;
+	height: 50px;
+	-webkit-box-shadow: 3px 3px 2 px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    3px 3px 2 px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         3px 3px 2 px 0px rgba(50, 50, 50, 0.75);
+}
+
+.btn_show {
+
+	background: #FFA4A4;
+}
+
+.image_rotate {
+	width: 60px;
+	height: 45px;
+}
+
+.image_lending {
+	-webkit-transform:rotate(-90deg);
+	width: 45px;
+	height: 60px;
+}
+
+.autocompleteGradient {
+}
+
+table{
+	-moz-box-shadow: 0 0 10px #ccc;
+	-webkit-box-shadow: 0 0 10px #ccc;
+	box-shadow: 0 0 10px #ccc;
+}
+
+a {
+	font-family: inherit;
+	font-size: 100%;
+	padding: .5em 1em;
+	color: #444;
+	color: rgba(0,0,0,.8);
+	border: 1px solid #999;
+	border: 0 rgba(0,0,0,0);
+	background-color: #E6E6E6;
+	text-decoration: none;
+	border-radius: 2px;
+}
+
 
