--- a/server_serial_port/app/views/lendings/_form.html.erb
+++ b/server_serial_port/app/views/lendings/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
 
-<div class="row">
-  <div class="col-xs-6 col-md-4">
+<div class="row" style="margin: auto;">
+  <div class="col-xs-6 col-md-4" style="align: center;">
 
     <div class="panel panel-default">
-      <div class="panel-heading">Empréstimo</div>
+      <div class="panel-heading">Lending</div>
       <div class="panel-body">
           <div class="field">
             <%= f.label :book_id %>: <%= link_to @lending.book.title,book_path(@lending.book) %><br>
@@ -49,9 +49,7 @@
           <div class="field">
           Image: <%= image_tag @lending.image.url(:thumb) %>
           </div>
-          <div class="actions">
-            <%= f.submit %>
-          </div>
+
       </div>
     </div>
   </div>
@@ -60,7 +58,7 @@
   <div class="col-xs-6 col-md-4">
 
     <div class="panel panel-default">
-      <div class="panel-heading">Livro</div>
+      <div class="panel-heading">Book</div>
       <div class="panel-body">
           <div class="field">
             <strong> Título: </strong><%= @lending.book.title %> 
