--- a/server_serial_port/app/views/lendings/edit.html.erb
+++ b/server_serial_port/app/views/lendings/edit.html.erb
@@ -3,7 +3,7 @@
 <% else %>
   <div class="security_green_background">
 <% end %>
-  <h1>Empréstimo: <strong><%= @lending_or_not %></strong></h1>
+  <h1>Lending: <strong><%= @lending_or_not %></strong></h1>
 
   <div class="progress progress-striped active">
     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @size_perc%>%">
