--- a/server_serial_port/app/views/lendings/index.html.erb
+++ b/server_serial_port/app/views/lendings/index.html.erb
@@ -1,52 +1,56 @@
-<h1>Listing lendings</h1>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Book</th>
-      <th>Lending</th>
-      <th>Size widht</th>
-      <th>Size height</th>
-      <th>RMSE</th>
-      <th>Size Error</th>
-      <th>Weight Error</th>
-      <th>Weight</th>
-      <th>Show</th>
-      <th>Edit</th>
-      <th>Destroy</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @lendings.each do |lending| %>
+<h1 style="text-align:center; ">Listing lendings</h1>
+<div class="index">
+  <table class="table table-striped table-hover">
+    <thead>
       <tr>
-        <td><%= image_tag lending.image.url(:thumb) %></td>
-        <td><%= lending.book_id %></td>
-        <% if lending.size_width.nil? || lending.size_height.nil? || lending.rmse.nil? || lending.size_error.nil? %>
-          <td> - </td>
-          <td> - </td>
-          <td> - </td>
-          <td> - </td>
-          <td> - </td>
-          <td> - </td>
-        <% else %>
-          <td><%= lending.lending %></td>
-          <td><%= lending.size_width.round(2) %> cm</td>
-          <td><%= lending.size_height.round(2) %> cm</td>
-          <td><%= lending.rmse.round(2) %></td>
-          <td><%= lending.size_error.round(2) %></td>
-          <td><%= lending.weight_error.round(2) %></td>
-        <% end %>
-        <td><%= lending.weight %> g</td>
-        <td><%= link_to 'Show', lending %></td>
-        <td><%= link_to 'Edit', edit_lending_path(lending) %></td>
-        <td><%= link_to 'Destroy', lending, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>ID</th>
+        <th>Image</th>
+        <th>Book</th>
+        <th>Lending</th>
+        <th>Size widht</th>
+        <th>Size height</th>
+        <th>RMSE</th>
+        <th>Size Error</th>
+        <th>Weight Error</th>
+        <th>Weight</th>
+        <th>Show</th>
+        <th>Edit</th>
+        <th>Destroy</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @lendings.each do |lending| %>
+        <tr>
+          <td><%= lending.id %></td>
+          <td><div class="image_medium" style="-webkit-transform:rotate(90deg);"><%= image_tag lending.image.url(:thumb) %></div></td>
+          <td><%= lending.book_id %></td>
+          <% if lending.size_width.nil? || lending.size_height.nil? || lending.rmse.nil? || lending.size_error.nil? %>
+            <td> - </td>
+            <td> - </td>
+            <td> - </td>
+            <td> - </td>
+            <td> - </td>
+            <td> - </td>
+          <% else %>
+            <td><%= lending.lending %></td>
+            <td><%= lending.size_width.round(2) %> cm</td>
+            <td><%= lending.size_height.round(2) %> cm</td>
+            <td><%= lending.rmse.round(2) %></td>
+            <td><%= lending.size_error.round(2) %></td>
+            <td><%= lending.weight_error.round(2) %></td>
+          <% end %>
+          <td><%= lending.weight.round(2) %> g</td>
+          <td><%= link_to 'Edit', edit_lending_path(lending), :class=>"btn btn-info"%></td>
+          <td><%= link_to 'Show', lending,:class=>"btn btn-success" %></td>
+          <td><%= link_to 'Destroy', lending, method: :delete, data: { confirm: 'Are you sure?' } ,:class=>"btn btn-danger"%></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
-
-<%= link_to 'New Lending', new_lending_path %>
+<div style="text-align:center;">
+  <%= link_to 'New Lending', new_lending_path %> <br>
+  <%= will_paginate @lendings, renderer: BootstrapPagination::Rails %>
+</div>
