--- a/server_serial_port/app/views/settings/index.html.erb
+++ b/server_serial_port/app/views/settings/index.html.erb
@@ -1,52 +1,56 @@
-<h1>Listing settings</h1>
+<h1 style="text-align:center">Listing settings</h1>
 
-Camera select: 
-<select id="select_camera" onchange="select_camera_event()">
-  <% @cameras.each do |camera| %>
-    <% if ServerSerialPort::Application.config.my_app.camera.include? camera %>
-      <option value="<%= camera %>" selected><%= camera %></option> 
-    <% else %>
-      <option value="<%= camera %>"><%= camera %></option> 
-    <% end %>
-  <% end %>
-</select>
+<div style="padding-left:15%;padding-right:15%;">
+  <div style="text-align:center;padding-bottom:20px;">
+    Camera select: 
+    <select id="select_camera" onchange="select_camera_event()">
+      <% @cameras.each do |camera| %>
+        <% if ServerSerialPort::Application.config.my_app.camera.include? camera %>
+          <option value="<%= camera %>" selected><%= camera %></option> 
+        <% else %>
+          <option value="<%= camera %>"><%= camera %></option> 
+        <% end %>
+      <% end %>
+    </select>
+  </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>In Use</th>
-      <th>Description</th>
-      <th>Debug</th>
-      <th>Min_value</th>
-      <th>Security level</th>
-      <th>Size</th>
-      <th>Similarity</th>
-      <th>Weight</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @settings.each do |setting| %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= setting.in_use %>
-        <td><%= setting.description %>
-        <td><%= setting.debug %></td>
-        <td><%= setting.min_value %></td>
-        <td><%= setting.security_level %></td>
-        <td><%= setting.size %></td>
-        <td><%= setting.similarity %></td>
-        <td><%= setting.weight %></td>
-        <td><%= link_to 'Show', setting %></td>
-        <td><%= link_to 'Edit', edit_setting_path(setting) %></td>
-        <td><%= link_to 'Destroy', setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>In Use</th>
+        <th>Description</th>
+        <th>Debug</th>
+        <th>Min_value</th>
+        <th>Security level</th>
+        <th>Size</th>
+        <th>Similarity</th>
+        <th>Weight</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @settings.each do |setting| %>
+        <tr>
+          <td ><%= setting.in_use %></td>
+          <td ><%= setting.description %></td>
+          <td ><%= setting.debug %></td>
+          <td ><%= setting.min_value %></td>
+          <td ><%= setting.security_level %></td>
+          <td ><%= setting.size %></td>
+          <td ><%= setting.similarity %></td>
+          <td ><%= setting.weight %></td>
+          <td ><%= link_to 'Show', setting %></td>
+          <td ><%= link_to 'Edit', edit_setting_path(setting) %></td>
+          <td ><%= link_to 'Destroy', setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
-
-<%= link_to 'New Setting', new_setting_path %>
+<div style="text-align:center;">
+  <%= link_to 'New Setting', new_setting_path %>
+</div>
