--- a/server_serial_port/app/views/settings/index.html.erb
+++ b/server_serial_port/app/views/settings/index.html.erb
@@ -52,5 +52,5 @@
 </div>
 <br>
 <div style="text-align:center;">
-  <%= link_to 'New Setting', new_setting_path %>
+  <%= link_to 'New Setting', new_setting_path, :class => "btn btn-default" %>
 </div>
