--- a/server_serial_port/app/views/settings/new.html.erb
+++ b/server_serial_port/app/views/settings/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New setting</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="col-xs-6 col-md-4"></div>
+  <div class="col-xs-6 col-md-4">
 
-<%= link_to 'Back', settings_path %>
+
+	<h1>New setting</h1>
+
+	<%= render 'form' %>
+
+	<%= link_to 'Back', settings_path, :class => "btn btn-info", :style => "width:100%" %>
+
+
+
+
+
+
+
+
+
+  </div>
+  <div class="col-xs-6 col-md-4"></div>
+</div>
